Add facts block

--- a/app/assets/stylesheets/public/new_template/blocks/pros_cons.sass
+++ b/app/assets/stylesheets/public/new_template/blocks/pros_cons.sass
@@ -13,6 +13,7 @@
 
 .pros_cons-description
   +acts_as_section_title
+  text-transform: none
   margin: 40px 0
   font-size: 17px
   line-height: 28px
