--- a/app/views/public/landings/palka_dlya_selfie.html.slim
+++ b/app/views/public/landings/palka_dlya_selfie.html.slim
@@ -20,6 +20,7 @@
 
 = render 'public/landings/templates/new/middle_page_cta', landing: @landing
 = render 'public/landings/templates/new/reviews', landing: @landing
+= render 'public/landings/templates/new/facts', landing: @landing
 = render 'public/landings/templates/new/how_we_work', landing: @landing
 
 = render 'public/landings/templates/new/faq', landing: @landing
