--- a/app/views/public/landings/templates/new/_how_we_work.html.slim
+++ b/app/views/public/landings/templates/new/_how_we_work.html.slim
@@ -8,9 +8,9 @@
         .how_we_work-item_img
           .how_we_work-item_counter
             | 1
-          img src=image_path('public/palka/icons/order.png')
+          img src=image_path('public/palka/icons/purchase.png')
         .how_we_work-item_title
-          | Вы оставляете заявку на сайте или по телефону
+          | Вы оставляете заявку на приобретение товара на нашем сайте
 
       .how_we_work-item
         .how_we_work-item_img
@@ -18,7 +18,7 @@
             | 2
           img src=image_path('public/palka/icons/phone_call.png')
         .how_we_work-item_title
-          | Менеджер связывается с Вами для подтверждения заказа
+          | Менеджер связывается с вами для подтверждения заказа
 
       .how_we_work-item
         .how_we_work-item_img
@@ -26,7 +26,7 @@
             | 3
           img src=image_path('public/palka/icons/shipping.png')
         .how_we_work-item_title
-          | Мы быстро доставляем Вашу посылку по указанному адресу
+          | Мы быстро доставляем вашу посылку по указанному адресу
 
       .how_we_work-item
         .how_we_work-item_img
