--- a/app/assets/stylesheets/public/new_template/blocks/faq.sass
+++ b/app/assets/stylesheets/public/new_template/blocks/faq.sass
@@ -26,6 +26,7 @@
 
 .faq-section_title
   +acts_as_section_footer
+  text-transform: uppercase
   line-height: 60px
   margin-bottom: 20px
   border-bottom: 1px solid $bd
