--- a/app/views/public/landings/templates/new/_reviews.html.slim
+++ b/app/views/public/landings/templates/new/_reviews.html.slim
@@ -14,6 +14,8 @@
       .reviews-list
         - landing.reviews.each_with_index do |review, i|
           .reviews-item.js-reviews-item class=('is-active' if i == 0)
+            .reviews-quote
+              img src=image_path('public/quote.png')
             .reviews-text.js-reviews-item_text
               | <span>&laquo;</span>#{review.text}&raquo;
             .reviews-info.js-reviews-item_info
