--- a/app/views/public/landings/palka_dlya_selfie.html.slim
+++ b/app/views/public/landings/palka_dlya_selfie.html.slim
@@ -29,5 +29,5 @@
 
 = render 'public/shared/modals'
 
-script id='shipping' data-title='Информация о доставке'
+script id='shipping' type='text/template' data-title='Информация о доставке'
   = render 'public/shared/shipping', landing: @landing
