Implement order form

--- a/app/views/public/landings/palka_dlya_selfie.html.slim
+++ b/app/views/public/landings/palka_dlya_selfie.html.slim
@@ -31,3 +31,6 @@
 
 script id='shipping' type='text/template' data-title='Информация о доставке'
   = render 'public/shared/shipping', landing: @landing
+
+script id='order_form' type='text/template' data-title='Оформление заказа'
+  = render 'public/shared/order_form_modal', landing: @landing
