--- a/app/views/public/landings/templates/new/_main_headline.html.slim
+++ b/app/views/public/landings/templates/new/_main_headline.html.slim
@@ -27,7 +27,7 @@
         .clearfix
           = render 'public/landings/templates/new/price', landing: landing, modifier_class: 'for-cta'
           .cta-button
-            .big_button
+            .big_button data-inline-modal='order_form'
               | Заказать сейчас в <b>1 клик</b> &rarr;
         .cta-additional_info
           | <b>Гарантия качества</b>, оплата при получении товара, доставка от одного дня.
