--- a/app/views/public/landings/templates/new/_middle_page_cta.html.slim
+++ b/app/views/public/landings/templates/new/_middle_page_cta.html.slim
@@ -23,7 +23,7 @@
             modifier_class: 'for-middle_page_cta',
             timer_message: 'Акция закончится через'
 
-          .big_button.for-middle_page_cta
+          .big_button.for-middle_page_cta data-inline-modal='order_form'
             | Заказать монопод &rarr;
 
   .middle_page_cta-bg
