--- a/app/assets/stylesheets/public/new_template/blocks/big_button.sass
+++ b/app/assets/stylesheets/public/new_template/blocks/big_button.sass
@@ -27,3 +27,10 @@
     height: 57px
     line-height: 55px
     font-size: 23px
+
+  &.for-order_form
+    display: block
+    width: 100%
+    height: 40px
+    line-height: 38px
+    font-size: 18px
