--- a/app/assets/stylesheets/public/new_template/blocks/footer_cta.sass
+++ b/app/assets/stylesheets/public/new_template/blocks/footer_cta.sass
@@ -38,7 +38,7 @@
   display: table
   table-layout: fixed
   width: 100%
-  margin: 30px 0 35px
+  margin: 30px 0 0
 
 .footer_cta-info_inner
   display: table-row
