--- a/app/assets/stylesheets/public/shared/blocks/modals/modal.sass
+++ b/app/assets/stylesheets/public/shared/blocks/modals/modal.sass
@@ -1,5 +1,6 @@
 .modal
-  width: 750px
+  display: inline-block
+  max-width: 750px
   border-radius: 5px
   box-shadow: 2px 2px 3px rgba(0, 0, 0, .05)
   text-align: left
@@ -18,11 +19,11 @@
 .modal-header
   overflow: hidden
   padding: 15px 15px 15px 25px
-  line-height: 25px
-  background: #bbb
-  color: #fff
+  font-size: 25px
+  line-height: 45px
+  background: #fff
+  text-align: center
   white-space: nowrap
-  text-shadow: 0 1px 1px rgba(0, 0, 0, .7)
   border-radius: 5px 5px 0 0
 
   .fl_r
@@ -30,7 +31,7 @@
 
 .modal-body
   margin-top: -1px
-  border-top: 1px solid #999
+  border-top: 1px solid #DFE1E4
   background: #fff
   color: #555
   overflow: hidden
@@ -56,6 +57,9 @@
     &:first-child
       margin-top: 0
 
+.modal-inner
+  padding: 15px
+
 .modal-fields
   padding: 15px
 
@@ -65,9 +69,12 @@
   height: 25px
 
 .modal-close
-  height: 25px
-  width: 25px
-  line-height: 23px
+  margin-top: -5px
+  margin-right: -5px
+  height: 35px
+  width: 35px
+  font-size: 17px
+  line-height: 35px
   box-sizing: border-box
   text-align: center
   border-radius: 3px
