Use 4-digits timer

--- a/app/assets/stylesheets/public/new_template/blocks/timer.sass
+++ b/app/assets/stylesheets/public/new_template/blocks/timer.sass
@@ -21,12 +21,14 @@
   line-height: 50px
 
 .timer-message,
+.timer-days,
 .timer-hours,
 .timer-minutes,
 .timer-seconds
   color: #fff
   text-shadow: 0 1px 2px rgba(0, 0, 0, .5)
 
+.timer-days,
 .timer-hours,
 .timer-minutes,
 .timer-seconds
@@ -60,6 +62,7 @@
   color: #fff
   text-shadow: 0 1px rgba(0, 0, 0, .5)
 
+  .timer-days,
   .timer-hours,
   .timer-minutes,
   .timer-seconds
@@ -80,6 +83,7 @@
   .timer-wrapper
     display: inline-block
 
+  .timer-days,
   .timer-hours,
   .timer-minutes,
   .timer-seconds
