--- a/app/views/public/landings/templates/old/_header.html.slim
+++ b/app/views/public/landings/templates/old/_header.html.slim
@@ -56,7 +56,7 @@
           .sub_header-arrow
             = fa_icon 'chevron-right'
 
-          = render 'public/shared/timer', landing: @landing, modifier_class: 'for-sub_header'
+          = render 'public/shared/timer', modifier_class: 'for-sub_header'
 
           .sub_header-arrow
             = fa_icon 'chevron-right'
