--- a/app/views/public/pages/home.html.slim
+++ b/app/views/public/pages/home.html.slim
@@ -25,7 +25,7 @@
                     .product-description
                       = landing.meta_description
                     .product-timer
-                      = render 'public/shared/timer', landing: landing, for_home_page: true, modifier_class: 'for-home_page'
+                      = render 'public/shared/timer', modifier_class: 'for-home_page'
                     .product-details
                       .product-prices.fl_l
                         span.product-new_price
