--- a/app/views/public/shared/_timer.html.slim
+++ b/app/views/public/shared/_timer.html.slim
@@ -1,11 +1,14 @@
 - modifier_class ||= ''
-- for_home_page ||= false
 - timer_message ||= 'До конца акции осталось'
 
-.timer class=modifier_class data-view='app#timer' data={landing_id: landing.id, for_home_page: for_home_page.to_s}
+.timer class=modifier_class data-view='app#timer'
   .timer-message
     = timer_message
   .timer-wrapper
+    .timer-days
+      | <span class="js-days">&ndash;</span> день
+    .timer-delimiter
+      | :
     .timer-hours
       | <span class="js-hours">&ndash;</span> час
     .timer-delimiter
