--- a/app/assets/stylesheets/public/old_template/blocks/timer.sass
+++ b/app/assets/stylesheets/public/old_template/blocks/timer.sass
@@ -17,6 +17,7 @@
   line-height: 33px
   margin-right: 5px
 
+.timer-days,
 .timer-hours,
 .timer-minutes,
 .timer-seconds
@@ -59,6 +60,7 @@
     font-size: 13px
     font-weight: bold
 
+  .timer-days,
   .timer-hours,
   .timer-minutes,
   .timer-seconds
