Add "About" modal

--- a/app/views/public/landings/palka_dlya_selfie.html.slim
+++ b/app/views/public/landings/palka_dlya_selfie.html.slim
@@ -34,3 +34,6 @@ script id='shipping' type='text/template' data-title='Информация о д
 
 script id='order_form' type='text/template' data-title='Оформление заказа'
   = render 'public/shared/order_form_modal', landing: @landing
+
+script id='about' type='text/template' data-title='О нашем интернет-магазине'
+  = render 'public/shared/about', landing: @landing
