--- a/app/views/public/landings/templates/new/_header.html.slim
+++ b/app/views/public/landings/templates/new/_header.html.slim
@@ -1,7 +1,7 @@
 .header.js-scroll_fix data-view='app#header'
   .header-inner
     ul.menu.for-header
-      li.menu-item
+      li.menu-item data-inline-modal='about'
         | О магазине
       li.menu-item data-inline-modal='shipping'
         | О доставке
