Implement sections scroll + quick links

--- a/app/assets/stylesheets/public/new_template/blocks/guarantees.sass
+++ b/app/assets/stylesheets/public/new_template/blocks/guarantees.sass
@@ -1,6 +1,7 @@
 @import 'public/new_template/imports'
 
 .guarantees
+  position: relative
   border-bottom: 1px solid $bd
   background: linear-gradient(#7491B4, #fff)
   color: #fff
