--- a/app/assets/stylesheets/public/new_template/blocks/how_we_work.sass
+++ b/app/assets/stylesheets/public/new_template/blocks/how_we_work.sass
@@ -1,6 +1,7 @@
 @import 'public/new_template/imports'
 
 .how_we_work
+  position: relative
   border-bottom: 1px solid $bd
   color: #fff
   background: linear-gradient(#7491B4, #fff)
