--- a/app/views/public/landings/templates/new/_description.html.slim
+++ b/app/views/public/landings/templates/new/_description.html.slim
@@ -1,4 +1,5 @@
 .description.js-scroll_fix
+  .section_anchor#photos
   .description-inner
     .description-title.animate-show_fast
       | С палкой для селфи Kjstar Z07-5...
