--- a/app/views/public/landings/templates/new/_footer_cta.html.slim
+++ b/app/views/public/landings/templates/new/_footer_cta.html.slim
@@ -20,7 +20,7 @@
             modifier_class: 'is-white'
           = render 'public/shared/timer', timer_message: 'Скидка действительна в течение', modifier_class: 'is-white'
           .footer_cta-button
-            .big_button.for-footer data-inline-modal='order_form'
+            .big_button.for-footer data-inline-modal='order_form_modal'
               | Заказать монопод Kjstar Z05-7 &rarr;
           .footer_cta-phone
             span.footer_cta-phone_message
