--- a/app/views/public/landings/templates/new/_guarantees.html.slim
+++ b/app/views/public/landings/templates/new/_guarantees.html.slim
@@ -1,4 +1,5 @@
-.guarantees.js-scroll_fix
+.guarantees.js-scroll_fix data-section='guarantees'
+  a.section_anchor#guarantees
   .guarantees-inner
     .guarantees-title.animate-show_fast
       | Мы работаем напрямую с производителем монопода&nbsp;Kjstar&nbsp;Z07-5,
