--- a/app/views/public/landings/templates/new/_header.html.slim
+++ b/app/views/public/landings/templates/new/_header.html.slim
@@ -1,11 +1,11 @@
 .header.js-scroll_fix data-view='app#header'
   .header-inner
     ul.menu.for-header
-      li.menu-item data-inline-modal='about'
+      li.menu-item data-inline-modal='about_modal'
         | О магазине
-      li.menu-item data-inline-modal='shipping'
+      li.menu-item data-section-name='shipping'
         | О доставке
-      li.menu-item
+      li.menu-item data-section-name='guarantees'
         | Гарантии
     img.header-logo src=image_path('public/logo.png')
     .header-phone
