--- a/app/views/public/landings/templates/new/_how_we_work.html.slim
+++ b/app/views/public/landings/templates/new/_how_we_work.html.slim
@@ -1,4 +1,5 @@
-.how_we_work.js-scroll_fix
+.how_we_work.js-scroll_fix data-section='shipping'
+  .section_anchor#shipping
   .how_we_work-inner
     .how_we_work-title
       | Как мы работаем и доставляем товары
@@ -37,4 +38,5 @@
           | Вы получаете свой товар и платите за него на почте или курьеру
 
     .how_we_work-more.animate-show_fast
-      | Доставка по Москве от одного дня, доставка во все регионы РФ в течение недели
+      span.g-dashed data-inline-modal='shipping_modal'
+        | Доставка по Москве от одного дня, доставка во все регионы РФ в течение недели
