--- a/app/views/public/landings/templates/new/_middle_page_cta.html.slim
+++ b/app/views/public/landings/templates/new/_middle_page_cta.html.slim
@@ -20,7 +20,7 @@
         .middle_page_cta-actions
           = render 'public/shared/timer', modifier_class: 'for-middle_page_cta', timer_message: 'Акция закончится через'
 
-          .big_button.for-middle_page_cta data-inline-modal='order_form'
+          .big_button.for-middle_page_cta data-inline-modal='order_form_modal'
             | Заказать монопод &rarr;
 
   .middle_page_cta-bg
