--- a/app/views/public/landings/templates/new/_reviews.html.slim
+++ b/app/views/public/landings/templates/new/_reviews.html.slim
@@ -2,6 +2,7 @@
 - man_reviews = 0
 
 .reviews.js-scroll_fix
+  .section_anchor#reviews
   .reviews-inner
     .reviews-title.animate-show_fast
       | Что говорят наши покупатели
