--- a/app/views/public/landings/templates/new/_pros_cons.html.slim
+++ b/app/views/public/landings/templates/new/_pros_cons.html.slim
@@ -70,9 +70,9 @@
         .pros_cons-cell
         .pros_cons-cell.is-winner
           .pros_cons-cell_title
-            .big_button.for-pros_cons data-inline-modal='order_form'
+            .big_button.for-pros_cons data-inline-modal='order_form_modal'
               | Купить монопод Kjstar
         .pros_cons-cell
           .pros_cons-cell_title
-            .big_button.for-pros_cons data-inline-modal='order_form'
+            .big_button.for-pros_cons data-inline-modal='order_form_modal'
               | Купить подделку
