Use inline modal for gallery

--- a/app/views/public/landings/templates/new/_photo_slider.html.slim
+++ b/app/views/public/landings/templates/new/_photo_slider.html.slim
@@ -11,7 +11,7 @@
   .photo_slider-photo_wrap
     .photo_slider-photo_inner
       .photo_slider-photo.js-main_photo style="background-image: url(#{photos.first.image.gallery.url});"
-      .photo_slider-zoom_button.js-open_gallery data-modal=public_landing_images_path
+      .photo_slider-zoom_button.js-open_gallery data-inline-modal='gallery_modal'
         = fa_icon 'search-plus'
   .photo_slider-arrow_right.js-show_next_photo
     = fa_icon 'chevron-right'
