--- a/app/views/public/landings/palka_dlya_selfie.html.slim
+++ b/app/views/public/landings/palka_dlya_selfie.html.slim
@@ -37,3 +37,6 @@ script id='order_form_modal' type='text/template' data-title='Оформлени
 
 script id='about_modal' type='text/template' data-title='О нашем интернет-магазине'
   = render 'public/shared/about', landing: @landing
+
+script id='gallery_modal' type='text/template' data-title=@landing.title
+  = render 'public/shared/images', images: @landing.landing_images.for_gallery
