--- a/app/views/public/landings/templates/new/_main_headline.html.slim
+++ b/app/views/public/landings/templates/new/_main_headline.html.slim
@@ -31,4 +31,4 @@
           | <b>Гарантия качества</b>, оплата при получении товара, доставка от одного дня.
 
   .main_headline-bg
-    img.main_headline-bg_image src=image_path('public/background.jpg')
+    img.main_headline-bg_image src=image_path('public/palka/background.jpg')
