Some cross-browser fixes

--- a/app/assets/stylesheets/public/new_template/blocks/faq.sass
+++ b/app/assets/stylesheets/public/new_template/blocks/faq.sass
@@ -2,6 +2,7 @@
 
 .faq
   border-bottom: 1px solid darken(#9F9F9F, 20%)
+  background: #6F6F6F
   background: linear-gradient(#424242, #A0A0A0)
 
 .faq-inner
