--- a/app/assets/stylesheets/public/new_template/blocks/guarantees.sass
+++ b/app/assets/stylesheets/public/new_template/blocks/guarantees.sass
@@ -3,6 +3,7 @@
 .guarantees
   position: relative
   border-bottom: 1px solid $bd
+  background: #8BA2BF
   background: linear-gradient(#7491B4, #fff)
   color: #fff
   text-shadow: 0 1px rgba(0, 0, 0, .9)
