--- a/app/assets/stylesheets/public/new_template/blocks/instructions.sass
+++ b/app/assets/stylesheets/public/new_template/blocks/instructions.sass
@@ -44,7 +44,8 @@
     height: 200px
     vertical-align: top
     border-radius: 3px
-    box-shadow: 1px 1px 5px rgba(0, 0, 0, .15)
+    box-shadow: 1px 1px 5px rgba(0, 0, 0, .1)
+    border: 1px solid #E7E7E7
 
 .instructions-item_title
 
