--- a/app/assets/stylesheets/public/new_template/blocks/how_we_work.sass
+++ b/app/assets/stylesheets/public/new_template/blocks/how_we_work.sass
@@ -4,6 +4,7 @@
   position: relative
   border-bottom: 1px solid $bd
   color: #fff
+  background: #8BA2BF
   background: linear-gradient(#7491B4, #fff)
   text-shadow: 0 1px rgba(0, 0, 0, .9)
 
