--- a/app/assets/stylesheets/public/shared/blocks/modals/modal.sass
+++ b/app/assets/stylesheets/public/shared/blocks/modals/modal.sass
@@ -17,8 +17,9 @@
     text-align: center
 
 .modal-header
+  position: relative
   overflow: hidden
-  padding: 15px 15px 15px 25px
+  padding: 15px 50px 15px 50px
   font-size: 25px
   line-height: 45px
   background: #fff
@@ -30,6 +31,7 @@
     margin-left: -100%
 
 .modal-body
+  position: relative
   margin-top: -1px
   border-top: 1px solid #DFE1E4
   background: #fff
@@ -69,8 +71,9 @@
   height: 25px
 
 .modal-close
-  margin-top: -5px
-  margin-right: -5px
+  position: absolute
+  top: 10px
+  right: 10px
   height: 35px
   width: 35px
   font-size: 17px
