--- a/app/views/public/landings/templates/new/_header.html.slim
+++ b/app/views/public/landings/templates/new/_header.html.slim
@@ -3,10 +3,10 @@
     ul.menu.for-header
       li.menu-item data-inline-modal='about_modal'
         | О магазине
-      li.menu-item data-section-name='shipping'
-        | О доставке
       li.menu-item data-section-name='guarantees'
         | Гарантии
+      li.menu-item data-section-name='shipping'
+        | Доставка
     img.header-logo src=image_path('public/logo.png')
     .header-phone
       span.header-phone_icon
