--- a/app/views/public/landings/palka_dlya_selfie.html.slim
+++ b/app/views/public/landings/palka_dlya_selfie.html.slim
@@ -10,33 +10,34 @@
 - content_for :script do
   = javascript_include_tag 'http://img.apishops.org/SinglePageWebsites/custom/js/apishopsForm.utf8.js'
 
-= render 'public/landings/templates/new/header', landing: @landing
-= render 'public/landings/templates/new/main_headline', landing: @landing
-= render 'public/landings/templates/new/description', landing: @landing
-= render 'public/landings/templates/new/advantages', landing: @landing
-= render 'public/landings/templates/new/pros_cons', landing: @landing
-= render 'public/landings/templates/new/guarantees', landing: @landing
-= render 'public/landings/templates/new/instructions', landing: @landing
+- cache ['v1', @landing.position, @landing] do
+  = render 'public/landings/templates/new/header', landing: @landing
+  = render 'public/landings/templates/new/main_headline', landing: @landing
+  = render 'public/landings/templates/new/description', landing: @landing
+  = render 'public/landings/templates/new/advantages', landing: @landing
+  = render 'public/landings/templates/new/pros_cons', landing: @landing
+  = render 'public/landings/templates/new/guarantees', landing: @landing
+  = render 'public/landings/templates/new/instructions', landing: @landing
 
-= render 'public/landings/templates/new/middle_page_cta', landing: @landing
-= render 'public/landings/templates/new/reviews', landing: @landing
-= render 'public/landings/templates/new/facts', landing: @landing
-= render 'public/landings/templates/new/how_we_work', landing: @landing
+  = render 'public/landings/templates/new/middle_page_cta', landing: @landing
+  = render 'public/landings/templates/new/reviews', landing: @landing
+  = render 'public/landings/templates/new/facts', landing: @landing
+  = render 'public/landings/templates/new/how_we_work', landing: @landing
 
-= render 'public/landings/templates/new/faq', landing: @landing
-= render 'public/landings/templates/new/footer_cta', landing: @landing
-= render 'public/landings/templates/new/footer', landing: @landing
+  = render 'public/landings/templates/new/faq', landing: @landing
+  = render 'public/landings/templates/new/footer_cta', landing: @landing
+  = render 'public/landings/templates/new/footer', landing: @landing
 
-= render 'public/shared/modals'
+  = render 'public/shared/modals'
 
-script id='shipping_modal' type='text/template' data-title='Информация о доставке'
-  = render 'public/shared/shipping', landing: @landing
+  script id='shipping_modal' type='text/template' data-title='Информация о доставке'
+    = render 'public/shared/shipping', landing: @landing
 
-script id='order_form_modal' type='text/template' data-title='Оформление заказа'
-  = render 'public/shared/order_form_modal', landing: @landing
+  script id='order_form_modal' type='text/template' data-title='Оформление заказа'
+    = render 'public/shared/order_form_modal', landing: @landing
 
-script id='about_modal' type='text/template' data-title='О нашем интернет-магазине'
-  = render 'public/shared/about', landing: @landing
+  script id='about_modal' type='text/template' data-title='О нашем интернет-магазине'
+    = render 'public/shared/about', landing: @landing
 
-script id='gallery_modal' type='text/template' data-title=@landing.title
-  = render 'public/shared/images', images: @landing.landing_images.for_gallery
+  script id='gallery_modal' type='text/template' data-title=@landing.title
+    = render 'public/shared/images', images: @landing.landing_images.for_gallery
