Remove "Buy fake" button

--- a/app/assets/stylesheets/public/new_template/blocks/pros_cons.sass
+++ b/app/assets/stylesheets/public/new_template/blocks/pros_cons.sass
@@ -81,6 +81,9 @@
     &.is-winner
       background: lighten(#EDC9CF, 2%)
 
+  &.is-empty
+    background: #fff
+
 .pros_cons-cell_title
   font-weight: bold
   line-height: 20px
