--- a/app/views/public/landings/palka_dlya_selfie.html.slim
+++ b/app/views/public/landings/palka_dlya_selfie.html.slim
@@ -41,3 +41,7 @@
 
   script id='gallery_modal' type='text/template' data-title=@landing.title
     = render 'public/shared/images', images: @landing.landing_images.for_gallery
+
+- if params[:order_id]
+  div data-view='app#success' data={modal_path: public_landing_success_modal_path(order_id: params[:order_id])}
+
