--- a/app/views/public/landings/success_modal.html.slim
+++ b/app/views/public/landings/success_modal.html.slim
@@ -1,14 +1,1 @@
-.success
-  .success-header
-    | Спасибо, что выбрали нас!
-    br
-    | Номер вашего заказа &mdash; <b>##{params[:order_id]}</b>.
-
-  .success-body
-    p
-      | Ваш заказ принят и будет исполнен в ближайшее время. Ожидайте звонка оператора в течение часа.
-    p
-      | Вы так же сами можете позвонить нам, чтобы уточнить детали заказа, по&nbsp;телефону&nbsp;<b>#{Settings.phone}</b>.
-        Не забудьте при этом сказать оператору номер вашего заказа (<b>##{params[:order_id]}</b>) и артикул товара (<b>##{@landing.apishops_article_id}</b>).
-    p
-      | После уточнения деталей доставки, товар будет <b>бережно упакован</b> и <b>доставлен по вашему адресу</b>!
+= render 'public/shared/success_modal'
