Optimize for small screens

--- a/app/assets/stylesheets/public/new_template/blocks/middle_page_cta.sass
+++ b/app/assets/stylesheets/public/new_template/blocks/middle_page_cta.sass
@@ -69,3 +69,12 @@
 .middle_page_cta-actions
   margin: 0 -25px
 
++screen_1024
+  .middle_page_cta-img_wrap
+    width: 25%
+
+  .middle_page_cta-info
+    width: 75%
+
+  .middle_page_cta-img
+    width: 130%
