--- a/app/assets/stylesheets/public/new_template/blocks/photo_slider.sass
+++ b/app/assets/stylesheets/public/new_template/blocks/photo_slider.sass
@@ -85,3 +85,18 @@
   &:hover
     background: rgba(0, 0, 0, .5)
 
+.photo_slider.for-footer
+  .photo_slider-photo_inner
+    width: 300px
+    height: 300px
+
++screen_1024
+  .photo_slider-photo_inner
+    width: 250px
+    height: 250px
+
+  .photo_slider.for-footer
+    .photo_slider-photo_inner
+      width: 250px
+      height: 250px
+
