--- a/app/views/public/landings/templates/new/_footer_cta.html.slim
+++ b/app/views/public/landings/templates/new/_footer_cta.html.slim
@@ -7,7 +7,7 @@
         .footer_cta-left
           = render 'public/landings/templates/new/photo_slider',
             landing: landing,
-            modifier_class: 'is-white'
+            modifier_class: 'is-white for-footer'
         .footer_cta-right
           .footer_cta-description
             .footer_cta-description_main
