Optimize photos slider animations a little

--- a/app/assets/stylesheets/public/new_template/blocks/photo_slider.sass
+++ b/app/assets/stylesheets/public/new_template/blocks/photo_slider.sass
@@ -36,6 +36,11 @@
   background-size: 100%
   background-repeat: no-repeat
   border-radius: 2px
+  transition: opacity .1s
+  opacity: 1
+
+  &.is-hidden
+    opacity: .1
 
 .photo_slider-arrow_left,
 .photo_slider-arrow_right
