--- a/app/assets/stylesheets/public/new_template/blocks/timer.sass
+++ b/app/assets/stylesheets/public/new_template/blocks/timer.sass
@@ -50,10 +50,10 @@
     margin-bottom: 1px
     color: #fff
     border-radius: 3px
-    transition: font-size .1s
+    // transition: font-size .1s
 
-    &.animate-zoom
-      font-size: 18px
+    // &.animate-zoom
+    //   font-size: 18px
 
 .timer-seconds
   margin-right: 0
