Let's try using fancy fonts for headers...

--- a/app/assets/stylesheets/public/new_template/blocks/big_button.sass
+++ b/app/assets/stylesheets/public/new_template/blocks/big_button.sass
@@ -19,6 +19,8 @@
     font-size: 15px
     height: 47px
     line-height: 45px
+    text-transform: uppercase
+    font-weight: bold
 
   &.for-middle_page_cta
     margin: 0 25px
