--- a/app/assets/stylesheets/public/new_template/blocks/faq.sass
+++ b/app/assets/stylesheets/public/new_template/blocks/faq.sass
@@ -28,7 +28,9 @@
 .faq-section_title
   +acts_as_section_footer
   text-transform: uppercase
-  line-height: 60px
+  font-family: 'bebas_neue'
+  font-size: 27px
+  line-height: 70px
   margin-bottom: 20px
   border-bottom: 1px solid $bd
 
