--- a/app/assets/stylesheets/public/new_template/blocks/guarantees.sass
+++ b/app/assets/stylesheets/public/new_template/blocks/guarantees.sass
@@ -48,7 +48,9 @@
 
 .guarantees-item_title
   margin-bottom: 10px
-  font-size: 18px
+  font-family: 'bebas_neue'
+  font-size: 27px
+  line-height: 32px
   font-weight: bold
   text-transform: uppercase
 
