--- a/app/assets/stylesheets/public/new_template/blocks/main_headline.sass
+++ b/app/assets/stylesheets/public/new_template/blocks/main_headline.sass
@@ -26,10 +26,11 @@
   padding-bottom: 50px
 
 .main_headline-title
-  font-size: 35px
+  font-size: 45px
   line-height: 55px
   text-align: center
   font-weight: bold
+  font-family: 'bebas_neue'
 
 .main_headline-info
   display: table
