--- a/app/assets/stylesheets/public/new_template/blocks/pros_cons.sass
+++ b/app/assets/stylesheets/public/new_template/blocks/pros_cons.sass
@@ -12,15 +12,15 @@
   +acts_as_section_title
 
 .pros_cons-description
-  +acts_as_section_title
-  text-transform: none
+  text-align: center
   margin: 40px 0
   font-size: 17px
   line-height: 28px
+  font-weight: bold
 
 .pros_cons-subtitle
   +acts_as_section_title
-  font-size: 22px
+  font-size: 30px
   line-height: 30px
 
 .pros_cons-table
@@ -34,8 +34,9 @@
   .pros_cons-cell
     text-align: center
     font-weight: bold
-    font-size: 17px
+    font-size: 25px
     line-height: 30px
+    font-family: 'bebas_neue'
 
     &:first-child
       background: #fff
@@ -86,8 +87,10 @@
 
 .pros_cons-cell_title
   font-weight: bold
-  line-height: 20px
+  font-size: 20px
+  line-height: 25px
   text-transform: uppercase
+  font-family: 'bebas_neue'
 
 .pros_cons-cell_description
   margin-top: 10px
