--- a/app/assets/stylesheets/public/new_template/imports.sass
+++ b/app/assets/stylesheets/public/new_template/imports.sass
@@ -12,8 +12,9 @@ $red: #D20A2F
 
 =acts_as_section_title
   margin-bottom: 30px
-  font-size: 27px
-  line-height: 40px
+  font-size: 40px
+  line-height: 60px
+  font-family: 'bebas_neue'
   font-weight: bold
   text-transform: uppercase
   text-align: center
