--- a/app/assets/stylesheets/public/new_template/all.css.sass
+++ b/app/assets/stylesheets/public/new_template/all.css.sass
@@ -1,5 +1,6 @@
 @import 'normalize-css/normalize'
 @import 'font-awesome'
+@import 'fonts'
 @import 'global'
 @import 'layout'
 @import 'blocks/**/*'
