--- a/app/assets/stylesheets/public/shared/blocks/modals/modal.sass
+++ b/app/assets/stylesheets/public/shared/blocks/modals/modal.sass
@@ -22,6 +22,7 @@
   padding: 15px 50px 15px 50px
   font-size: 25px
   line-height: 45px
+  font-family: 'bebas_neue', 'Helvetica Neue', 'Tahoma', 'Arial', 'sans-serif'
   background: #fff
   text-align: center
   white-space: nowrap
