--- a/app/views/public/landings/templates/new/_pros_cons.html.slim
+++ b/app/views/public/landings/templates/new/_pros_cons.html.slim
@@ -16,7 +16,7 @@
         .pros_cons-cell.is-winner
           | Kjstar Z07-5
         .pros_cons-cell
-          | Китайская подделка
+          | Подделка
       .pros_cons-row
         .pros_cons-cell
           | Кнопка фотографии
@@ -69,7 +69,6 @@
       .pros_cons-row.is-last
         .pros_cons-cell
         .pros_cons-cell.is-winner
-          .pros_cons-cell_title
-            .big_button.for-pros_cons data-inline-modal='order_form_modal'
-              | Купить монопод Kjstar
+          .big_button.for-pros_cons data-inline-modal='order_form_modal'
+            | Купить монопод Kjstar
         .pros_cons-cell.is-empty
