--- a/app/views/public/shared/_counters.html.slim
+++ b/app/views/public/shared/_counters.html.slim
@@ -1,6 +1,14 @@
-javascript:
-  window.gaWidget = new Widgets.GoogleAnalytics('#{Settings.google_analytics.application_id}');
-  window.gaWidget.trackPageview();
+- googleAnalyticsAppId = Settings.google_analytics.application_id
+
+- if googleAnalyticsAppId
+  javascript:
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+    ga('create', '#{googleAnalyticsAppId}', 'auto');
+    ga('send', 'pageview');
 
 / Yandex.Metrika counter
 javascript:
