Remove old tracking

--- a/app/views/public/landings/templates/old/_main_section.html.slim
+++ b/app/views/public/landings/templates/old/_main_section.html.slim
@@ -21,7 +21,7 @@
 
     .columns
       .why_to_buy
-        .why_to_buy-inner data-view='app#why_area' data-section-name='description'
+        .why_to_buy-inner data-section-name='description'
           img src=image_path('public/woman.png')
           .why_to_buy-text
             h3= @landing.why_question
