Integrate analytics goals

--- a/app/views/public/landings/templates/new/_footer_cta.html.slim
+++ b/app/views/public/landings/templates/new/_footer_cta.html.slim
@@ -1,4 +1,4 @@
-.footer_cta.js-scroll_fix
+.footer_cta.js-scroll_fix data-section='footer_order'
   .footer_cta-inner
     .footer_cta-title
       | Делай неповторимые селфи с моноподом Kjstar Z05-7
