--- a/app/views/public/landings/templates/new/_middle_page_cta.html.slim
+++ b/app/views/public/landings/templates/new/_middle_page_cta.html.slim
@@ -1,4 +1,4 @@
-.middle_page_cta.js-scroll_fix
+.middle_page_cta.js-scroll_fix data-section='middle_page_order'
   .middle_page_cta-inner
     .middle_page_cta-title
       | Спешите воспользоваться ограниченным предложением!
