Fix header article_id integration

--- a/app/views/public/landings/templates/new/_header.html.slim
+++ b/app/views/public/landings/templates/new/_header.html.slim
@@ -16,4 +16,4 @@
       span.header-phone_text
         | (бесплатно)
       .header-phone_article
-        | Артикул товара: <b>#123456789</b>
+        | Артикул товара: <b>##{landing.apishops_article_id}</b>
