Add better backgroung for the main headline

--- a/app/assets/stylesheets/public/new_template/blocks/main_headline.sass
+++ b/app/assets/stylesheets/public/new_template/blocks/main_headline.sass
@@ -93,9 +93,9 @@
   padding: 0 5px
   font-size: 27px
   color: desaturate($red, 20%)
-  text-shadow: 0 1px rgba(255, 255, 255, .35)
+  text-shadow: none
   font-weight: bold
-  background: rgba(#fff, .2)
+  background: rgba(#fff, .5)
   border-radius: 3px
 
 +screen_1024
