--- a/app/assets/stylesheets/public/new_template/blocks/photo_slider.sass
+++ b/app/assets/stylesheets/public/new_template/blocks/photo_slider.sass
@@ -6,25 +6,18 @@
   vertical-align: middle
   text-align: center
 
-  &.is-white
-    .photo_slider-photo_wrap,
-    .photo_slider-arrow_left:hover,
-    .photo_slider-arrow_right:hover
-      background: rgba(255, 255, 255, .3)
-
 .photo_slider-photo_wrap
   position: relative
   float: left
-  background: rgba(0, 0, 0, .2)
   border-radius: 3px
+  background: none
   box-shadow: 0 0 3px rgba(0, 0, 0, .2)
   z-index: 2
 
 .photo_slider-photo_inner
   position: relative
-  margin: 7px
-  height: 270px
-  width: 270px
+  height: 280px
+  width: 280px
   background: #fff
   border-radius: 3px
 
@@ -56,7 +49,7 @@
   text-shadow: 0 1px 2px rgba(0, 0, 0, .5)
 
   &:hover
-    background: rgba(#000, .2)
+    background: rgba(255, 255, 255, .3)
     cursor: pointer
 
   .fa
