--- a/app/assets/stylesheets/public/new_template/blocks/main_headline.sass
+++ b/app/assets/stylesheets/public/new_template/blocks/main_headline.sass
@@ -31,6 +31,7 @@
   text-align: center
   font-weight: bold
   font-family: 'bebas_neue'
+  letter-spacing: 1.3px
 
 .main_headline-info
   display: table
