--- a/app/views/public/landings/templates/new/_advantages.html.slim
+++ b/app/views/public/landings/templates/new/_advantages.html.slim
@@ -1,7 +1,7 @@
 .advantages.js-scroll_fix
   .advantages-inner
     .advantages-title.animate-show_fast
-      | Монопод Kjstar Z07-5 (палка для селфи) подойдет вам, если...
+      | Монопод Kjstar Z07-5 подойдет вам, если...
 
     .advantages-list
       .advantages-item.animate-show_fast
