--- a/app/views/public/landings/templates/new/_photo_slider.html.slim
+++ b/app/views/public/landings/templates/new/_photo_slider.html.slim
@@ -8,10 +8,10 @@
 ]
   .photo_slider-arrow_left.js-show_prev_photo
     = fa_icon 'chevron-left'
-  .photo_slider-photo_wrap
+  .photo_slider-photo_wrap.js-open_gallery data-inline-modal='gallery_modal'
     .photo_slider-photo_inner
       .photo_slider-photo.js-main_photo style="background-image: url(#{photos.first.image.gallery.url});"
-      .photo_slider-zoom_button.js-open_gallery data-inline-modal='gallery_modal'
+      .photo_slider-zoom_button
         = fa_icon 'search-plus'
   .photo_slider-arrow_right.js-show_next_photo
     = fa_icon 'chevron-right'
