--- a/app/views/public/landings/templates/new/_reviews.html.slim
+++ b/app/views/public/landings/templates/new/_reviews.html.slim
@@ -27,4 +27,4 @@
                   img src=image_path("public/review_author_woman#{woman_reviews += 1}.jpg")
               .review-author
                 | <span class="review-author_name">#{review.author}</span>,
-                  <span class="review-author_city">г. Самара</span>
+                  <span class="review-author_city">#{review.author_profession}</span>
