--- a/app/assets/stylesheets/public/new_template/blocks/faq.sass
+++ b/app/assets/stylesheets/public/new_template/blocks/faq.sass
@@ -33,6 +33,7 @@
   line-height: 70px
   margin-bottom: 20px
   border-bottom: 1px solid $bd
+  letter-spacing: .7px
 
 .faq-section_columns
   +clearfix
