--- a/app/assets/stylesheets/public/new_template/imports.sass
+++ b/app/assets/stylesheets/public/new_template/imports.sass
@@ -18,6 +18,7 @@ $red: #D20A2F
   font-weight: bold
   text-transform: uppercase
   text-align: center
+  letter-spacing: 0.8px
 
 =acts_as_section_footer
   font-size: 22px
