--- a/app/assets/stylesheets/public/shared/blocks/modals/modal.sass
+++ b/app/assets/stylesheets/public/shared/blocks/modals/modal.sass
@@ -4,6 +4,7 @@
   border-radius: 5px
   box-shadow: 2px 2px 3px rgba(0, 0, 0, .05)
   text-align: left
+  vertical-align: top
 
   &.has-no_header
     .modal-body
@@ -27,6 +28,7 @@
   text-align: center
   white-space: nowrap
   border-radius: 5px 5px 0 0
+  letter-spacing: .5px
 
   .fl_r
     margin-left: -100%
